# gpu-roofline-framework

./: .gitignore  CMakeLists.txt  README.md
include/core/: algorithm.hpp  problem_size.hpp  run_result.hpp
include/kernels/: attention_naive.hpp  attention_tiled.hpp  attention_tiled_db.hpp  attention_tiled_db_k16.hpp  attention_tiled_ilp.hpp  ssm_scan.hpp
include/modeling/: analytical_model.hpp  roofline.hpp
include/profiling/: cuda_timer.hpp  ncu_metrics.hpp  plot_data.hpp  validation_report.hpp
include/utils/: cuda_check.hpp
src/: main.cpp
src/kernels/: attention_naive.cu  attention_tiled.cu  attention_tiled_db.cu  attention_tiled_db_k16.cu  attention_tiled_ilp.cu  ssm_scan.cu
src/modeling/: analytical_model.cpp  roofline.cpp
src/profiling/: ncu_metrics.cpp  plot_data.cpp  validation_report.cpp
